# sarkaribot

./: .flake8  .gitignore  AI_SETUP_COMPLETE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  VS_CODE_SETTINGS_CORRECTED.md  codecov.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  sarkaribot-ui-ux-research.md  scraping_system_report.py
.github/: SECURITY.md  copilot-chat-instructions.md  copilot-instructions.md  knowledge.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/prompts/: implementation_prompt.md
.github/workflows/: ci.yml  deploy.yml  security.yml  test-coverage.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_SETUP.md  DOCKER_TROUBLESHOOTING.md  LOCAL_DEVELOPMENT.md  TESTING.md  URL_STRUCTURE_GUIDE.md  monitoring.md
sarkaribot/: .gitignore  README.md  docker-compose.dev.yml
sarkaribot/backend/: .env.example  SETTINGS.md  conftest.py  create_sample_data.py  fix_remaining_issues.py  manage.py  pytest.ini  setup_dev.py  validate_url_structure.py
sarkaribot/backend/config/: asgi.py  celery.py  settings.py  settings_dev.py  settings_legacy_dev.py  settings_legacy_dev_docker.py  settings_local.py  settings_preprod.py  urls.py  (+1 more)
sarkaribot/docker/: Dockerfile.dev  Dockerfile.frontend.dev
sarkaribot/frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
scripts/: deploy.sh  dev.bat  dev.sh  init-db.sql  install_nlp.sh  integration_summary.sh  quick_test.py  run_tests.sh  setup_dev.sh  setup_local_dev.sh  setup_nlp.py  setup_nlp.sh  setup_simple.sh  setup_tools.sh  start_backend.sh  start_frontend.sh  test_integration.sh  test_integration_local.sh  verify_integration.sh  verify_setup.sh
(+177 files in other folders)
